# Sockman

./: .gitignore  .gitreview  CMakeLists.txt  README.md  push_template.sh
doc/: makefile  sockman.doxygen
doc/html/: _address_8cpp.html  _address_8cpp_source.html  _c_p_p_socket_2_r_e_a_d_m_e_8md.html  _c_p_p_socket_2_r_e_a_d_m_e_8md_source.html  _c_recycle_queue_8h.html  _c_recycle_queue_8h_source.html  _common_socket_8cpp.html  _common_socket_8cpp_source.html  _datagram_8cpp.html  _datagram_8cpp_source.html  _r_e_a_d_m_e_8md.html  _r_e_a_d_m_e_8md_source.html  _socket_8hpp.html  _socket_8hpp_source.html  _socket_exception_8cpp.html  _socket_exception_8cpp_source.html  _t_c_p_8cpp.html  _t_c_p_8cpp_source.html  _t_c_p___c_s_8cpp.html  _t_c_p___c_s_8cpp_source.html  _t_c_p___c_s_8hpp.html  _t_c_p___c_s_8hpp_source.html  _t_c_p_man_8cpp.html  _t_c_p_man_8cpp_source.html  _t_c_p_man_8hpp.html  _t_c_p_man_8hpp_source.html  _u_d_p_8cpp.html  _u_d_p_8cpp_source.html  _u_d_p_man_8hpp.html  _u_d_p_man_8hpp_source.html  annotated.html  bar_8c.html  bar_8c_source.html  class_auto_lock-members.html  class_auto_lock.html  class_c_recycle_queue-members.html  class_c_recycle_queue.html  class_i_log4z_manager-members.html  class_i_log4z_manager.html  class_json_1_1_batch_allocator-members.html  (+183 more)
doc/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_2.js  classes_3.js  classes_5.js  classes_6.js  classes_7.js  classes_9.js  classes_a.js  classes_b.js  defines_0.js  defines_1.js  defines_2.js  defines_3.js  defines_4.js  defines_5.js  defines_6.js  (+73 more)
sockman/: .cproject  .gitignore  .project  CMakeLists.txt  Makefile  README.md  TCPMan.cpp  TCPMan.hpp  TCP_CS.cpp  TCP_CS.hpp  loger.cpp  loger.hpp  sockman  sockman.cpp  test.hex
sockman/CPPSocket/: Address.cpp  CommonSocket.cpp  Datagram.cpp  Socket.hpp  SocketException.cpp  TCP.cpp  TCPMan.cpp  TCP_CS.cpp  UDP.cpp
sockman/CQ/: CRecycleQueue.h  test_CQ.cpp
sockman/bar/: Makefile  bar.c
sockman/colorout/: colorout.cpp  colorout.h
sockman/log4z/: log4z.cpp  log4z.h
sockman/log_debug_win/: log_debug.cpp  log_debug.h
sockman/queue_base/: Makefile  queue_test.cpp
sockman/vs2010/: SockWin.sln  SockWin.vcxproj  SockWin.vcxproj.filters  vs2010.rar
sockman/vs2015/: SockWin.sln  SockWin.vcxproj  SockWin.vcxproj.filters  vs2015.rar
test/: CMakeLists.txt  main_test.cpp
