cmake_minimum_required(VERSION 2.8)
project (sockman)
INCLUDE_DIRECTORIES(CPPSocket json)
AUX_SOURCE_DIRECTORY("." DIR_SRCS)
AUX_SOURCE_DIRECTORY("log4z" DIR_SRCS)
SET(SOCKMAN ${DIR_SRCS})
ADD_EXECUTABLE(${PROJECT_NAME} ${SOCKMAN})
find_package(Threads)
TARGET_LINK_LIBRARIES(${PROJECT_NAME} "m  ${CMAKE_THREAD_LIBS_INIT}")
 
