cmake_minimum_required(VERSION 2.8)
project (sockman)
INCLUDE_DIRECTORIES(CPPSocket json .)
AUX_SOURCE_DIRECTORY("." DIR_SRCS)
AUX_SOURCE_DIRECTORY("log4z" DIR_SRCS)
IF (CMAKE_SYSTEM_NAME MATCHES "Windows")
AUX_SOURCE_DIRECTORY("CPPSocket" DIR_SRCS)
ENDIF (CMAKE_SYSTEM_NAME MATCHES "Windows")

SET(SOCKMAN ${DIR_SRCS})
MESSAGE(STSTUS "###################################")
MESSAGE(STATUS "operation system is ${CMAKE_SYSTEM}")
ADD_EXECUTABLE(${PROJECT_NAME} ${SOCKMAN})
find_package(Threads)
TARGET_LINK_LIBRARIES(${PROJECT_NAME} ${CMAKE_THREAD_LIBS_INIT})
 
MESSAGE(STSTUS "###################################")


 
